<resources>
    <string name="app_name">App Fridge</string>

    <string name="action_search">Search</string>
    <string name="action_perspective_appgroup">App Group Perspective</string>
    <string name="action_perspective_packagestate">App State Perspective</string>
    <string name="action_new_appgroup">New Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="add_to_group_button">Add to Group</string>
    <string name="toggle_app_status_button">Toggle</string>
    <string name="enable_app_status_button">Enable</string>
    <string name="disable_app_status_button">Disable</string>
    <string-array name="app_status_selection_array">
        <item>All</item>
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>

    <string name="generated_app_group_name_all">All</string>

    <string name="app_group_dialog_title">Select Group Name</string>
    <string name="app_group_dialog_positive_button">Create</string>
    <string name="app_group_dialog_negative_button">Cancel</string>

    <string name="progress_dialog_title_update_app_status">Updating application status</string>

    <string name="new_app_group_dialog_title">New Group</string>
    <string name="new_app_group_dialog_positive_button">Create</string>
    <string name="new_app_group_dialog_negative_button">Cancel</string>

    <string name="confirm_delete_app_group_dialog_title_prefix">Are you sure you want to delete</string>
    <string name="confirm_delete_app_group_dialog_positive_button">Confirm</string>
    <string name="confirm_delete_app_group_dialog_negative_button">Cancel</string>

    <string name="confirm_delete_package_from_app_group_dialog_title_prefix">Modify</string>
    <string name="confirm_delete_package_from_app_group_dialog_msg_prefix">Are you sure you want to remove</string>
    <string name="confirm_delete_package_from_app_group_dialog_positive_button">Confirm</string>
    <string name="confirm_delete_package_from_app_group_dialog_negative_button">Cancel</string>

    <string name="package_list_for_adding_to_group_dialog_title_prefix">Add packages to</string>
    <string name="package_list_for_adding_to_group_dialog_positive_button">Add</string>
    <string name="package_list_for_adding_to_group_dialog_negative_button">Cancel</string>

    <string name="group_action_dialog_title_prefix">Actions for</string>
    <string name="group_action_dialog_enable_packages_button">Enable Apps</string>
    <string name="group_action_dialog_disable_packages_button">Disable App</string>

    <string name="goto_accessibility_settings_dialog_title">Enable service in accessibility settings</string>
    <string name="goto_accessibility_settings_dialog_msg">The service must be enabled to detect the switching of apps!</string>
    <string name="goto_accessibility_settings_dialog_positive_button">Go to Settings</string>
    <string name="goto_accessibility_settings_dialog_negative_button">Cancel</string>

    <string name="toast_enabled_packages_msg_prefix">Enabled packages:</string>
    <string name="toast_disabled_packages_msg_prefix">Disabled packages:</string>
    <string name="toast_warn_no_launcher_intent_msg_prefix">No launching intent for package:</string>
    <string name="toast_add_packages_to_app_group_msg_prefix">Adding packages</string>

</resources>
