<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mysticwind.disabledappmanager.ui.activity.perspective.group.AppGroupPerspective">

    <item android:id="@+id/action_switch_perspective" android:title="@string/action_perspective_packagestate"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_new_app_group" android:title="@string/action_new_appgroup"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
