<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.mysticwind.disabledappmanager.ui.databinding.model.ApplicationStateViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <Spinner
            android:id="@+id/app_status_spinner"
            android:spinnerMode="dropdown"
            android:selectedItemPosition="@={viewModel.viewMode}"
            android:entries="@array/app_status_selection_array"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/add_to_group_button"
            android:text="@string/add_to_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/app_status_spinner"
            android:layout_toRightOf="@+id/app_status_spinner" />

        <Button
            android:id="@+id/toggle_app_state_button"
            android:text="@string/toggle_app_status_button"
            android:onClick="@{() -> viewModel.toggleSelectedApplications()}"
            android:visibility="@{viewModel.viewMode == 0 ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/app_status_spinner" />

        <Button
            android:id="@+id/enable_app_button"
            android:text="@string/enable_app_status_button"
            android:onClick="@{() -> viewModel.enableSelectedApplications()}"
            android:visibility="@{viewModel.viewMode == 2 ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/app_status_spinner" />

        <Button
            android:id="@+id/disable_app_button"
            android:text="@string/disable_app_status_button"
            android:onClick="@{() -> viewModel.disableSelectedApplications()}"
            android:visibility="@{viewModel.viewMode == 1 ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/app_status_spinner" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/appListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/app_status_spinner"
            android:descendantFocusability="blocksDescendants"
            />

    </RelativeLayout>

</layout>

